packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__multiple_concurrent_batches_independent_states.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
">│⠋    format:check                                                                                       ...       <1ms"
" │⠋    lint:check                                                                                         ...       <1ms"
" │⠋ ▶  build-batch (2)                                                                                                  "
" │⠋ ▼  test-batch (2)                                                                                                   "
" │⠋      app:test                                                                                         ...       <1ms"
" │⠋      shared:test                                                                                      ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
