packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__narrow_width_rendering.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                        "
"                                Duration"
"                                        "
"                                        "
"> ·    app1:build                    ..."
"  ·    app1:test                     ..."
"  ·    app2:lint                     ..."
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
