packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__navigation_first_nested_task_selected.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Batch Display Test...                                                                    Cache   Duration"
" │                                                                                                                      "
" │⠋ ▼  build-batch (3)                                                                                                  "
">│⠋      app:build                                                                                        ...       <1ms"
" │⠋      lib:build                                                                                        ...       <1ms"
" │⠋      standalone:test                                                                                  ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
