packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pagination_consistency_page1_after_navigation.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
" NX    Running Pagination Test...                               Cache   Duration"
"                                                                                "
"                                                                                "
"> ·    short1                                                     ...        ..."
"  ·    short2                                                     ...        ..."
"  ·    this-is-a-very-long-task-name-that-exceeds-thirty-chara    ...        ..."
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ← 1/1 →                                                       quit: q  help: ?"
