packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__pagination_consistency_page2_long_names.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
" NX    Running Pagination Test...                          Cache        Duration"
"                                                                                "
"                                                                                "
">   ·  short1                                                ...             ..."
"    ·  short2                                                ...             ..."
"    ·  this-is-a-very-long-task-name-that-exceeds-           ...             ..."
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ← 1/1 →                                                       quit: q  help: ?"
